# test_file

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/test_pkg/: __init__.py
tests/: test_test_pkg.py
