[tool.poetry]
name = "test_pkg"
version = "0.0.0"
description = "Test package for the professor"
authors = ["Marion BIGOTTE"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
